CCM NG:     - Datasets for UserRepositoryTest     - Some code formatting
git-svn-id: https://svn.libreccm.org/ccm/ccm_ng@3499 8810af33-2d31-482b-a856-94f89814c4df